--- a/Web/package.json
+++ b/Web/package.json
@@ -7,7 +7,13 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "build": "webpack"
+  },
+  "devDependencies": {
+    "webpack": "^4.42.0",
+    "jest": "^25.1.0",
+    "webpack-cli": "^3.1.2"
   },
   "author": "",
   "license": "ISC"
