--- a/Web/package.json
+++ b/Web/package.json
@@ -8,12 +8,12 @@
   },
   "scripts": {
     "test": "jest --watchAll",
-    "build": "webpack"
+    "build": "webpack --mode production"
   },
   "devDependencies": {
-    "webpack": "^4.42.0",
     "jest": "^25.1.0",
-    "webpack-cli": "^3.1.2"
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11"
   },
   "author": "",
   "license": "ISC"
